# Libtorch-MobileSAM-Example

./: .gitignore  README.md
example-app/: $  .CMakeLists.txt.swp  .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  automatic_mask_generator.cpp  automatic_mask_generator.h  configure.sh  example-app-old.cpp  example-app.cpp  example_main.cpp  main.cpp  main_sam.cpp  mobile_sam.cpp  mobile_sam.hpp  predictor.cpp  predictor.h  resize_longest_size.cpp  resize_longest_size.h  visualize.cpp  visualize.hpp  yolo.cpp  yolo.h
example-app/screencast/: screencast.webm
example-app/tests/: MyUnitTestCode.cpp  PredictorTest.cpp  UnitTest.cpp  UnitTest.h
